cmake_minimum_required(VERSION 3.16)
set(project_name compiler)
project(${project_name} CXX)
set(CMAKE_CXX_STANDARD 17)

file(GLOB_RECURSE source_files "src/*.cpp")
file(GLOB_RECURSE source_lib "third_party/*.cpp")
add_compile_options(-g -std=c++17 -O2)
include_directories(src)
include_directories(src/structure)
include_directories(src/frontend)
include_directories(src/optimizer)
include_directories(src/codegen/armv8)
include_directories(third_party/antlr4-runtime)
add_executable(compiler ${source_files} ${source_lib})